<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">TymyReader</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading..</string>
    <string name="title_activity_discussion_list">DiscussionList</string>
    <string name="discussion_list">Discussions List</string>
    <string name="title_activity_tymy_list">TymyReader</string>
    <string name="title_general_settings_activity">TymyReader General Settings</string>
    <string name="coming_soon">Coming soon..</string>
    <string name="no_tymy">No Tymy defined</string>
    <string name="no_tymy_hint">press menu button to add new Tymy</string>
    <string name="no_discussion">No discussion found..</string>
    <string name="items_new">new:</string>
    <string name="new_item">** NEW **</string>
    <string name="current_value_is">Current value is:</string>
    <string name="empty_discussion">Network problem or discussion is empty!</string>
    <string name="send_to">Share via</string>
    <string name="no_connection">No network connection available.</string>
    <string name="development">Development</string>
    <string name="share_via">Share via</string>

    <!-- Global Setting -->
    <string name="no_new_items">\"No new items\" message</string>
    <string name="no_new_items_key">no_new_items_key</string>
    <string name="no_new_items_message">Choose your own \"No new items\" message</string>
    <string name="no_new_items_default">boring..</string>

    <string-array name="theme_list_entry">
        <item>Light</item>
        <item>Black</item>
    </string-array>
    <string-array name="theme_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Menus -->
    <string name="menu_add_tymy">Add Tymy</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_post">New post</string>
    <string name="menu_context_edit">Edit</string>
    <string name="menu_context_share">Share</string>
    <string name="menu_context_delete">Delete</string>
    <string name="menu_web">Open web</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Edit Tymy Activity -->
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="title_activity_add_tymy">Add Tymy</string>
    <string name="add_tymy_heading">Add new Tymy</string>
    <string name="title_activity_edit_tymy">Edit Tymy</string>
    <string name="edit_tymy_heading">Edit Tymy</string>
    <string name="new_url_text">server (e.g. myteam.tymy.cz)</string>
    <string name="new_user_text">User</string>
    <string name="new_pass_text">Password</string>
    <string name="show_pass">show password</string>
    <string name="try_login">Test login</string>
    <string name="login_ok">Login OK</string>
    <string name="login_failed">Login failed!</string>
    <string name="invalid_url">Invalid server URL!</string>
    <string name="conecting">Conecting..</string>

    <!-- CrashReports -->
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">TymyReader has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="menu_send_report">Send crash report now</string>
    <string name="pref_enable_acra">Crash Reports</string>
    <string name="pref_acra_enabled">Sending reports enabled</string>
    <string name="pref_acra_disabled">Sending reports disabled</string>

    <!-- Post -->
    <string name="title_activity_post">Insert new post</string>
    <string name="button_post">Insert</string>
    <string name="send_ok">Insert OK</string>
    <string name="send_failed">Insert failed!</string>
    <string name="sending">Sending..</string>

</resources>