<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="@string/no_new_items_default"
        android:dialogMessage="@string/no_new_items_message"
        android:dialogTitle="@string/no_new_items"
        android:enabled="true"
        android:key="@string/no_new_items_key"
        android:title="@string/no_new_items" />

    <!--
        <ListPreference
        android:entries="@array/theme_list_entry"
        android:entryValues="@array/theme_list_values"
        android:key="com.ph.tymyreader.theme" />
    -->

    <PreferenceCategory
        android:key="pref_key_development_settings"
        android:title="@string/development" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="acra.enable"
            android:summaryOff="@string/pref_acra_disabled"
            android:summaryOn="@string/pref_acra_enabled"
            android:title="@string/pref_enable_acra" />
    </PreferenceCategory>

</PreferenceScreen>